# mycf_gm

./: README.md  browser_only_scraper.py  inspect_response.py  main.py  pyproject.toml  response.html  scraper.py  test_async.py  test_final.py  test_nodriver.py  test_selectors.py  test_seleniumbase.py
cookies/: gsmarena_cookies.json
data/: gsmarena_browser_only_checkpoint.json  gsmarena_failed_urls.txt  gsmarena_specs_browser_only.json
