[project]
name = "myspider-gsmarena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "browserforge>=1.2.4",
    "curl-cffi>=0.14.0",
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "nodriver>=0.48.1",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "pycryptodomex>=3.23.0",
    "pywin32>=311",
    "scrapling>=0.4.2",
    "seleniumbase>=4.47.4",
]
